@@ -14,6 +14,7 @@
 - Fixed submitting notification settings when "Maximum minutes ..." was not set
 - Fixed bookmark addition error
 - Disabled periodic updater during restore
+- Fixed issue about sending messages with recipients of specific lesson
 
 === Version 3.6.3 build 7455 ===
 - Fixed error in course completion page
